--- a/index.html
+++ b/index.html
@@ -87,6 +87,42 @@
           </figure>
         </div>
       </article>
+
+      <article class="portfolio">
+        <div class="container">
+          <div class="info-container">
+            <h3>Poject 3</h3>
+            <hr />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptas
+              quibusdam minus dolorem iure deleniti incidunt consequuntur placeat beatae ullam.
+            </p>
+            <a class="button view-code" href="">view Code</a>
+            <a class="button view-code" href="">see it online</a>
+          </div>
+          <figure>
+            <img src="./images/chairs-arranged-on-table-305564.jpg" alt="" />
+          </figure>
+        </div>
+      </article>
+
+      <article class="portfolio">
+        <div class="container">
+          <div class="info-container">
+            <h3>Poject 4</h3>
+            <hr />
+            <p>
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptas
+              quibusdam minus dolorem iure deleniti incidunt consequuntur placeat beatae ullam.
+            </p>
+            <a class="button view-code" href="">view Code</a>
+            <a class="button view-code" href="">see it online</a>
+          </div>
+          <figure>
+            <img src="./images/chairs-arranged-on-table-305564.jpg" alt="" />
+          </figure>
+        </div>
+      </article>
     </section>
 
     <!--ABOUT-->
