--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <article class="portfolio">
         <div class="container">
           <div class="info-container">
-            <h3>Poject 1</h3>
+            <h3>Project 1</h3>
             <hr />
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptas
@@ -75,7 +75,7 @@
       <article class="portfolio">
         <div class="container">
           <div class="info-container">
-            <h3>Poject 2</h3>
+            <h3>Project 2</h3>
             <hr />
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptas
@@ -93,7 +93,7 @@
       <article class="portfolio">
         <div class="container">
           <div class="info-container">
-            <h3>Poject 3</h3>
+            <h3>Project 3</h3>
             <hr />
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptas
@@ -111,7 +111,7 @@
       <article class="portfolio">
         <div class="container">
           <div class="info-container">
-            <h3>Poject 4</h3>
+            <h3>Project 4</h3>
             <hr />
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptas
