--- a/index.html
+++ b/index.html
@@ -46,8 +46,7 @@
       <div class="containter">
         <h2>portfolio</h2>
         <p>
-          Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quas eligendi tenetur quia
-          soluta molestiae exercitationem delectus itaque sed expedita debitis?
+          Below you can see some projects I've been working on lately. Before starting a project i follow up four guidelines: research, wireframing, design & development. This process allows me to create great product with client goals in mind.
         </p>
       </div>
     </section>
@@ -57,14 +56,13 @@
       <article class="portfolio">
         <div class="container">
           <div class="info-container">
-            <h3>Project 1</h3>
+            <h3>Dental Clinic</h3>
             <hr />
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptas
-              quibusdam minus dolorem iure deleniti incidunt consequuntur placeat beatae ullam.
+              This project is a full system to manage a dental clinic. It has role based functions (pacients, admin, dentist & recepcionist) such as get an appointment, treat a patient and writting a medical record, rate the clinic after each appointment, cancel appointments and so on. I update and improve the system every so often to have more functionalities for the users.
             </p>
-            <a class="button view-code" href="">view Code</a>
-            <a class="button view-code" href="">see it online</a>
+            <a class="button view-code" target="_blank" href="https://github.com/NicoFerrero/Clinica-Dental">view Code</a>
+            <a class="button view-code see-online" target="_blank" href="https://clinicadental-17c02.web.app/">see it online</a>
           </div>
           <figure>
             <img src="./images/chairs-arranged-on-table-305564.jpg" alt="" />
@@ -75,17 +73,17 @@
       <article class="portfolio">
         <div class="container">
           <div class="info-container">
-            <h3>Project 2</h3>
+            <h3>PHP API</h3>
             <hr />
             <p>
               Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptas
               quibusdam minus dolorem iure deleniti incidunt consequuntur placeat beatae ullam.
             </p>
-            <a class="button view-code" href="">view Code</a>
-            <a class="button view-code" href="">see it online</a>
+            <a class="button view-code" target="_blank" href="">view Code</a>
+            <a class="button view-code see-online" target="_blank" href="">see it online</a>
           </div>
           <figure>
-            <img src="./images/chairs-arranged-on-table-305564.jpg" alt="" />
+            <img src="./images/iStock-689964038-1.jpg" alt="" />
           </figure>
         </div>
       </article>
@@ -93,17 +91,16 @@
       <article class="portfolio">
         <div class="container">
           <div class="info-container">
-            <h3>Project 3</h3>
+            <h3>Game Room</h3>
             <hr />
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptas
-              quibusdam minus dolorem iure deleniti incidunt consequuntur placeat beatae ullam.
+              This is an online game room where you will be able to compete with other player in 6 diferent games such as memory test, tic tac toe, rock papers scissors and so on.
             </p>
-            <a class="button view-code" href="">view Code</a>
-            <a class="button view-code" href="">see it online</a>
+            <a class="button view-code" target="_blank" href="https://github.com/NicoFerrero/Sala-de-Juegos">view Code</a>
+            <a class="button view-code see-online" target="_blank" href="https://parciallab4-894a5.web.app/">see it online</a>
           </div>
           <figure>
-            <img src="./images/chairs-arranged-on-table-305564.jpg" alt="" />
+            <img src="./images/as-deck-gluck-glucksspiel-279009.jpg" alt="" />
           </figure>
         </div>
       </article>
@@ -111,14 +108,13 @@
       <article class="portfolio">
         <div class="container">
           <div class="info-container">
-            <h3>Project 4</h3>
+            <h3>Weather App</h3>
             <hr />
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptas
-              quibusdam minus dolorem iure deleniti incidunt consequuntur placeat beatae ullam.
+              This in one of my first project using external API's. For this developement i used google maps api and a weather api
             </p>
-            <a class="button view-code" href="">view Code</a>
-            <a class="button view-code" href="">see it online</a>
+            <a class="button view-code" target="_blank" href="https://github.com/NicoFerrero/weather-app">view Code</a>
+            <a class="button view-code see-online" target="_blank" href="https://nicoferrero.github.io/weather-app/">see it online</a>
           </div>
           <figure>
             <img src="./images/chairs-arranged-on-table-305564.jpg" alt="" />
