--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
       <div class="container">
         <h1 id="h1">Nicolas Ferrero</h1>
         <h2 id="h2">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim atque consequuntur eaque
-          maxime doloribus laborum nobis praesentium architecto accusamus sequi.
+          I'm an Argentina based Fullstack developer focused on crafting clean & user‑friendly experiences. 
         </h2>
         <a id="a" class="button check-work" href="">check my work</a>
       </div>
