--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
     <footer>
       <div class="container">
         <p id="copy">
-          <span>© 2019 <a href="">nicolas ferrero</a> </span>. made in argentina
+          <span>© 2019 <a href="">nicolas ferrero</a> </span>
         </p>
       </div>
     </footer>
