--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <h2 id="h2">
           I'm an Argentina based Fullstack developer focused on crafting clean & user‑friendly experiences.
         </h2>
-        <a id="a" class="button check-work" href="">check my work</a>
+        <a id="a" class="button check-work" href="#portfolio-desc">check my work</a>
       </div>
     </section>
 
@@ -75,11 +75,10 @@
             <h3>PHP API</h3>
             <hr />
             <p>
-              Lorem, ipsum dolor sit amet consectetur adipisicing elit. Cupiditate voluptas
-              quibusdam minus dolorem iure deleniti incidunt consequuntur placeat beatae ullam.
+              This is a php rest api developed with the micro framework slim and MySQL for the database. It's a complete crud api with jwt security.
             </p>
-            <a class="button view-code" target="_blank" href="">view Code</a>
-            <a class="button view-code see-online" target="_blank" href="">see it online</a>
+            <a class="button view-code" target="_blank" href="https://github.com/NicoFerrero/Laboratorio3-Programacion3/blob/master/Parcial%20II%20PROG3/index.php">view Code</a>
+            <a class="button view-code see-online" target="_blank">see it online</a>
           </div>
           <figure>
             <img src="./images/iStock-689964038-1.jpg" alt="" />
@@ -127,9 +126,7 @@
       <div class="container">
         <h2>about me</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt nobis qui nostrum
-          tenetur, cumque sequi a delectus eveniet corrupti nesciunt, optio obcaecati perspiciatis
-          harum maiores earum quo ut eaque! Sit!
+          My name is Nicolas Ferrero i'm 25 years old and i graduated as a mechatronic technician. I'm currently studying to be a system analyst in the UTN. I'm really looking forward to take my first steps into the developement industry and to do so i'm working really hard in the projects listed above.
         </p>
       </div>
     </section>
