--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <a href="#home" class="logo"></a>
       <ul class="nav-links">
         <li><a onclick="toggleMenuLinks()" class="links" href="#portfolio-desc">portfolio</a></li>
-        <li><a onclick="toggleMenuLinks()" class="links" rel="noopener noreferrer" target="_blank" href="./CURRICULUM VITAE.pdf">resume</a></li>
+        <li><a onclick="toggleMenuLinks()" class="links" rel="noopener noreferrer" target="_blank" href="./NicolasFerrero_CV.pdf">resume</a></li>
         <li><a onclick="toggleMenuLinks()" class="links" href="#about">about</a></li>
         <li><a onclick="toggleMenuLinks()" class="links" href="#contact">contact</a></li>
       </ul>
